2002-11-28  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/asm.S (console_cls): Write spaces to the entire screen
	instead of getting/setting the video mode, because this flickers
	the screen and is quite annoying, if using a LCD.

2002-11-15  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi (QNX): New subsection. Reported by
	Marian-Nicolae V. ION <marian_ion@noos.fr>.

2002-10-28  Yoshinori K. Okuji  <okuji@enbug.org>

	* grub/asmstub.c (console_translate_key): Deal with KEY_PPAGE
	and KEY_NPAGE.
	* stage2/serial.c (serial_translate_key_sequence): Added two new
	codes for Page Up and Page Down.
	* stage2/asm.S (translation_table): Added entries for KEY_PPAGE
	and KEY_NPAGE.
	* stage2/stage2.c (run_menu): Deal with Page Up and Page Down.
	Also recognize the right key for the selection of a boot entry.
	Suggested by Adam Lackorzynski <adam@os.inf.tu-dresden.de>.

2002-10-10  Jason Thomas  <jason@topic.com.au>

	* stage2/builtins.c (setup_func): Added missing space to --force-lba
	option. Reported by Kenneth Crudup <kenny@panix.com>

2002-10-06  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/asm.S (gateA20): Output a dummy command (0xff), as a
	workaround for USB keyboard hanging problem. Suggested by
	Hidetoshi Nishimaki <nishimaki@mxs.nes.nec.co.jp>.

2002-10-06  Yoshinori K. Okuji  <okuji@enbug.org>

	* configure.in (falign_loop_flag): New variable. Set to if GCC
	supports `-falign-*'. If true, use `-falign-jumps',
	`-falign-loops' and `-falign-functions' instead of
	`-malign-jumps', `-malign-loops' and `-malign-functions',
	because `-malign-*' are obsolete in GCC 3.x. Reported by Jeremy
	Katz.

2002-09-13  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/serial.c (fill_input_buf): Take a new argument NOWAIT.
	If NOWAIT is true, don't loop.
	All callers are changed.

2002-09-08  Yoshinori K. Okuji  <okuji@enbug.org>

	* configure.in (--disable-serial): Fix a typo in the
	description.

2002-08-20  Jason Thomas <jason@topic.com.au>
